<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F5F5F5"
    android:padding="24dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar_perfil2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"/>

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome2"
        android:background="#FFFFFF"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/editTextApelido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apelido2"
        android:background="#FFFFFF"
        android:padding="12dp"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email2"
        android:background="#FFFFFF"
        android:padding="12dp"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password3"
        android:background="#FFFFFF"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/efetuar_altera_es"
            android:backgroundTint="#0658fd"
            android:textColor="#FFFFFF"
            android:padding="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="8dp"/>

        <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar2"
        android:backgroundTint="#aaa"
        android:textColor="#FFFFFF"
        android:padding="8dp"/>

    </LinearLayout>
</LinearLayout>