<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:padding="24dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sobre_n_s1"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="12dp"/>

    <TextView
        android:id="@+id/textMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto"
        android:textSize="16sp"
        android:textColor="#666666"
        android:paddingBottom="16dp"/>

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:backgroundTint="#0658fd"
        android:textColor="#FFFFFF"
        android:padding="8dp"/>
</LinearLayout>