<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/bookDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_tulo"
                android:fontFamily="@font/poppins_semi_bold"
                android:lineHeight="32dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="16dp" />

            <ImageView
                android:id="@+id/coverImageView"
                android:layout_width="187dp"
                android:layout_height="203dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/authorsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/autores"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:weightSum="3">

                <!-- Published Date Section -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:paddingHorizontal="8dp">

                    <TextView
                        android:id="@+id/publishedDateTextView_Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/publicado"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:layout_marginBottom="4dp" />

                    <TextView
                        android:id="@+id/publishedDateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/published_date"
                        android:textSize="14sp"
                        android:textColor="@color/black" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:paddingHorizontal="8dp">

                    <TextView
                        android:id="@+id/pagesTextView_Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/n_mero_p_ginas"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:layout_marginBottom="4dp" />

                    <TextView
                        android:id="@+id/pagesTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Page Count"
                        android:textSize="14sp"
                        android:textColor="@color/black" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:paddingHorizontal="8dp">

                    <TextView
                        android:id="@+id/averageRatingTextView_Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/average_rating"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:layout_marginBottom="4dp" />

                    <TextView
                        android:id="@+id/averageRatingTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/average_rating2"
                        android:textSize="14sp"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="16sp"
                android:layout_marginTop="8dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_button"
                    android:layout_width="0dp"
                    android:layout_height="51dp"
                    android:layout_weight="1"
                    app:cornerRadius="16dp"
                    android:backgroundTint="#FDB870"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textColor="#000000"
                    android:layout_gravity="center"
                    android:text="@string/adicionar_cole_o"
                    android:textSize="16sp"
                    android:layout_marginEnd="8dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/back_button"
                    android:layout_width="0dp"
                    android:layout_height="51dp"
                    android:layout_weight="1"
                    app:cornerRadius="16dp"
                    android:backgroundTint="#FDB870"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textColor="#000000"
                    android:layout_gravity="center"
                    android:text="@string/voltar"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</FrameLayout>
