<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.loginFragment"
    android:background="@color/background_color"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginTop="120dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insira_o_nome_de_utilizador"
            boxBackgroundMode="filled"
            boxBackgroundColor="#F1EEEA"
            boxCornerRadiusTopStart="45dp"
            boxCornerRadiusTopEnd="45dp"
            boxCornerRadiusBottomStart="45dp"
            boxCornerRadiusBottomEnd="45dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:background="@drawable/rounded_text_field"
                android:alpha="0.8" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            boxBackgroundMode="filled"
            boxBackgroundColor="#F1EEEA"
            boxCornerRadiusTopStart="45dp"
            boxCornerRadiusTopEnd="45dp"
            boxCornerRadiusBottomStart="45dp"
            boxCornerRadiusBottomEnd="45dp"
            endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textPassword"
                android:background="@drawable/rounded_text_field_password"
                android:alpha="0.8" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="213dp"
            android:layout_height="51dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#FDB870"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_semi_bold"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:text="@string/enter"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/register_link"
            android:fontFamily="@font/poppins_semi_bold"
            />
    </LinearLayout>
</FrameLayout>