<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.register.registerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginBottom="40dp">

        <!-- ScrollView for Input Fields -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nome_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome"
                    boxBackgroundColor="#F1EEEA"
                    boxBackgroundMode="filled"
                    boxCornerRadiusBottomEnd="45dp"
                    boxCornerRadiusBottomStart="45dp"
                    boxCornerRadiusTopEnd="45dp"
                    boxCornerRadiusTopStart="45dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_nome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:background="@drawable/rounded_text_field"
                        android:fontFamily="@font/poppins_medium" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/apelido_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apelido"
                    boxBackgroundColor="#F1EEEA"
                    boxBackgroundMode="filled"
                    boxCornerRadiusBottomEnd="45dp"
                    boxCornerRadiusBottomStart="45dp"
                    boxCornerRadiusTopEnd="45dp"
                    boxCornerRadiusTopStart="45dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_apelido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:background="@drawable/rounded_text_field"
                        android:fontFamily="@font/poppins_medium" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/insira_o_nome_de_utilizador"
                    boxBackgroundColor="#F1EEEA"
                    boxBackgroundMode="filled"
                    boxCornerRadiusBottomEnd="45dp"
                    boxCornerRadiusBottomStart="45dp"
                    boxCornerRadiusTopEnd="45dp"
                    boxCornerRadiusTopStart="45dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:background="@drawable/rounded_text_field"
                        android:fontFamily="@font/poppins_medium" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/password"
                    boxBackgroundColor="#F1EEEA"
                    boxBackgroundMode="filled"
                    boxCornerRadiusBottomEnd="45dp"
                    boxCornerRadiusBottomStart="45dp"
                    boxCornerRadiusTopEnd="45dp"
                    boxCornerRadiusTopStart="45dp"
                    endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:background="@drawable/rounded_text_field_password"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirm_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/confirm_password"
                    boxBackgroundColor="#F1EEEA"
                    boxBackgroundMode="filled"
                    boxCornerRadiusBottomEnd="45dp"
                    boxCornerRadiusBottomStart="45dp"
                    boxCornerRadiusTopEnd="45dp"
                    boxCornerRadiusTopStart="45dp"
                    endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:background="@drawable/rounded_text_field_password"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
        </ScrollView>

        <!-- Button and Text Container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="213dp"
                android:layout_height="51dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:backgroundTint="#FDB870"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/enter"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/login_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="Já tens conta? Inicia sessão!" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>